--- a/public/html/invoices/invoiceSection.html
+++ b/public/html/invoices/invoiceSection.html
@@ -18,7 +18,7 @@
       </h2>
     </div>
     <div class="flex justify-end">
-      <button @click="$store.invo.removeAllItems()" class="flex items-baseline modal-btn-prim p-1">
+      <button @click="$store.invo.removeAllItems()" class="btn-sec">
         <svg class="size-4 mr-1.5">
           <use href="/icons/icons.svg#trash" />
         </svg>
