--- a/public/html/invoices/totals.html
+++ b/public/html/invoices/totals.html
@@ -89,7 +89,7 @@
       <!-- Button Section -->
       <div class="flex justify-between mt-auto">
         <!-- MARK: DISCOUNT MODAL -->
-        <div x-data="{ modDisc: false, showXDisc: false, uiDiscount: 0 }">
+        <div x-data="{ modDisc: false, showXDisc: false, uiDiscount: 0 }" class="flex justify-center">
           <button @click="modDisc = !modDisc" x-ref="discountAnchor" class="modal-btn-prim">
             <svg class="size-4">
               <use href="/icons/icons.svg#trending-down"></use>
