--- a/public/html/editor/editView.html
+++ b/public/html/editor/editView.html
@@ -132,7 +132,7 @@
             <div class="flex justify-around w-full">
               <button
                 @click="$store.edit.deleteInvoice($store.edit.invoiceItems.invoice.id)"
-                class="modal-btn-sec flex items-center">
+                class="btn-sec flex items-center">
                 <svg class="size-4 mr-1">
                   <use href="/icons/icons.svg#trash" />
                 </svg>
@@ -143,7 +143,7 @@
                 <svg class="size-4 mr-1">
                   <use href="/icons/icons.svg#editor" />
                 </svg>
-                Edit
+                Edit Invoice
               </button>
             </div>
           </div>
