--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-GB">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -121,6 +121,7 @@
             x-show="$store.clients.clients.length > 0 && $store.clients.selectedClient !== null"
             x-html="tabHtml"
             class="2xl:max-w-[80%] mx-auto flex flex-col h-full min-h-0"></div>
+
           <!-- MARK: CREATE CLIENT MODAL -->
           <div x-show="$store.clients.showAddClientModal" class="z-50" id="my-modal">
             <!-- Modal content -->
@@ -346,5 +347,41 @@
       console.log('\!!-------Alpine_Start_Index.html----------!!')
     </script>
     <script src="./alpinejs/dist/alpine.js" defer></script>
+    <!-- Flatpickr (CSS + JS) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.9/dayjs.min.js"></script>
+    <script>
+      function flatpickrWidget(object, fieldName) {
+        return {
+          instance: null,
+
+          init() {
+            // 1) Read the initial ISO date from the Alpine store
+            const initialISO = Alpine.store('edit')[object][fieldName] || ''
+
+            this.instance = flatpickr(this.$refs.fpInput, {
+              // Display format e.g. "10/Feb/2025"
+              dateFormat: 'd/M/Y',
+              // Provide initial date for Flatpickr
+              defaultDate: initialISO,
+
+              // 3) Whenever user picks a new date...
+              onChange: selectedDates => {
+                if (selectedDates.length > 0) {
+                  // Convert the picked JS Date object => "YYYY-MM-DD"
+                  const iso = dayjs(selectedDates[0]).format('YYYY-MM-DD')
+                  // Update the Alpine store
+                  Alpine.store('edit').changeDate(object, fieldName, iso)
+                } else {
+                  // If the user clears the date, store empty
+                  Alpine.store('edit').changeDate(object, fieldName, '')
+                }
+              },
+            })
+          },
+        }
+      }
+    </script>
   </body>
 </html>
