--- a/public/html/editorMain.html
+++ b/public/html/editorMain.html
@@ -89,7 +89,7 @@
                         </div>
                         <div x-data="tooltip('Edit discount and deposit for ' + copy.invoice_number)">
                           <button
-                            @click.stop="$store.edit.fetchCopyInvoice(copy.id); console.log('COPIED INVO ID', copy); console.log('COPIED INVO ID', copy.original_invoice_id)"
+                            @click.stop="$store.edit.openCopyModal(copy.id)"
                             class="table-interaction-icon-blue !text-vls2 hover:!text-blue-500 dark:!text-vds3light dark:hover:!text-blue-500">
                             <svg class="size-4">
                               <use href="/icons/icons2.xml#window" />
